--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="top"
         android:hint="내용 입력" />
 
     <Button
@@ -24,4 +25,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="쓰기" />
+
 </LinearLayout>
