--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/view_main">
 
     <!-- main content -->
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -17,18 +18,18 @@
 
         <ProgressBar
             android:id="@+id/prg"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
 
         <android.support.design.widget.FloatingActionButton
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             android:layout_gravity="bottom|end"
             android:layout_margin="15dp"
             android:elevation="5dp"
@@ -46,6 +47,8 @@
         android:background="#FFFFFF"
         android:divider="#23222A"
         android:dividerHeight="1dp"
-        android:orientation="vertical" />
+        android:orientation="vertical">
+
+    </ListView>
 
 </android.support.v4.widget.DrawerLayout>
