--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -27,19 +27,27 @@
         android:layout_gravity="right"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txt_date_create"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:text="작성날짜" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_date_update"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:text="마지막 수정" />
+            <TextView
+                android:id="@+id/txt_date_create"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                android:text="작성날짜" />
+
+            <TextView
+                android:id="@+id/txt_date_update"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="마지막 수정" />
+        </LinearLayout>
+
+
 
         <Spinner
             android:id="@+id/spn_option"
